// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Trace の決定論 > シナリオ1(対比): 索引を外したフルスキャン: StepEvent[] がスナップショットと一致する 1`] = `
[
  {
    "candidates": [
      {
        "accessType": "ALL",
        "chosen": true,
        "cost": 45,
        "covering": false,
        "estimatedRows": 200,
        "index": null,
        "reason": "クラスタ索引のリーフを全件走査する",
        "table": "users",
      },
    ],
    "nodeId": "n3",
    "planTree": {
      "children": [
        {
          "children": [
            {
              "accessType": "ALL",
              "children": [],
              "estimatedRows": 200,
              "id": "n1",
              "label": "Table scan on users",
              "op": "TableScan",
              "table": "users",
            },
          ],
          "id": "n2",
          "label": "Filter: (email = 'hina.watanabe100@example.com')",
          "op": "Filter",
        },
      ],
      "id": "n3",
      "label": "Projection: *",
      "op": "Projection",
    },
    "seq": 0,
    "type": "plan.selected",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-0",
    "seq": 1,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-0",
    "seq": 2,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 1,
    "seq": 3,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 1,
    "seq": 4,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 2,
    "seq": 5,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 2,
    "seq": 6,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 3,
    "seq": 7,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 3,
    "seq": 8,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 4,
    "seq": 9,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 4,
    "seq": 10,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 5,
    "seq": 11,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 5,
    "seq": 12,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 6,
    "seq": 13,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 6,
    "seq": 14,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 7,
    "seq": 15,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 7,
    "seq": 16,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 8,
    "seq": 17,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 8,
    "seq": 18,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-1",
    "seq": 19,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-1",
    "seq": 20,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 9,
    "seq": 21,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 9,
    "seq": 22,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 10,
    "seq": 23,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 10,
    "seq": 24,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 11,
    "seq": 25,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 11,
    "seq": 26,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 12,
    "seq": 27,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 12,
    "seq": 28,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 13,
    "seq": 29,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 13,
    "seq": 30,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 14,
    "seq": 31,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 14,
    "seq": 32,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 15,
    "seq": 33,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 15,
    "seq": 34,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 16,
    "seq": 35,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 16,
    "seq": 36,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-2",
    "seq": 37,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-2",
    "seq": 38,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 17,
    "seq": 39,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 17,
    "seq": 40,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 18,
    "seq": 41,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 18,
    "seq": 42,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 19,
    "seq": 43,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 19,
    "seq": 44,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 20,
    "seq": 45,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 20,
    "seq": 46,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 21,
    "seq": 47,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 21,
    "seq": 48,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 22,
    "seq": 49,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 22,
    "seq": 50,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 23,
    "seq": 51,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 23,
    "seq": 52,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 24,
    "seq": 53,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 24,
    "seq": 54,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-3",
    "seq": 55,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-3",
    "seq": 56,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 25,
    "seq": 57,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 25,
    "seq": 58,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 26,
    "seq": 59,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 26,
    "seq": 60,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 27,
    "seq": 61,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 27,
    "seq": 62,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 28,
    "seq": 63,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 28,
    "seq": 64,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 29,
    "seq": 65,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 29,
    "seq": 66,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 30,
    "seq": 67,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 30,
    "seq": 68,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 31,
    "seq": 69,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 31,
    "seq": 70,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 32,
    "seq": 71,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 32,
    "seq": 72,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-4",
    "seq": 73,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-4",
    "seq": 74,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 33,
    "seq": 75,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 33,
    "seq": 76,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 34,
    "seq": 77,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 34,
    "seq": 78,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 35,
    "seq": 79,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 35,
    "seq": 80,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 36,
    "seq": 81,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 36,
    "seq": 82,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 37,
    "seq": 83,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 37,
    "seq": 84,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 38,
    "seq": 85,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 38,
    "seq": 86,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 39,
    "seq": 87,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 39,
    "seq": 88,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 40,
    "seq": 89,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 40,
    "seq": 90,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-5",
    "seq": 91,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-5",
    "seq": 92,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 41,
    "seq": 93,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 41,
    "seq": 94,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 42,
    "seq": 95,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 42,
    "seq": 96,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 43,
    "seq": 97,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 43,
    "seq": 98,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 44,
    "seq": 99,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 44,
    "seq": 100,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 45,
    "seq": 101,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 45,
    "seq": 102,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 46,
    "seq": 103,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 46,
    "seq": 104,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 47,
    "seq": 105,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 47,
    "seq": 106,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 48,
    "seq": 107,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 48,
    "seq": 108,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-6",
    "seq": 109,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-6",
    "seq": 110,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 49,
    "seq": 111,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 49,
    "seq": 112,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 50,
    "seq": 113,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 50,
    "seq": 114,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 51,
    "seq": 115,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 51,
    "seq": 116,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 52,
    "seq": 117,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 52,
    "seq": 118,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 53,
    "seq": 119,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 53,
    "seq": 120,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 54,
    "seq": 121,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 54,
    "seq": 122,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 55,
    "seq": 123,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 55,
    "seq": 124,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 56,
    "seq": 125,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 56,
    "seq": 126,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-7",
    "seq": 127,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-7",
    "seq": 128,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 57,
    "seq": 129,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 57,
    "seq": 130,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 58,
    "seq": 131,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 58,
    "seq": 132,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 59,
    "seq": 133,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 59,
    "seq": 134,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 60,
    "seq": 135,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 60,
    "seq": 136,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 61,
    "seq": 137,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 61,
    "seq": 138,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 62,
    "seq": 139,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 62,
    "seq": 140,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 63,
    "seq": 141,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 63,
    "seq": 142,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 64,
    "seq": 143,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 64,
    "seq": 144,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-8",
    "seq": 145,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-8",
    "seq": 146,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 65,
    "seq": 147,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 65,
    "seq": 148,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 66,
    "seq": 149,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 66,
    "seq": 150,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 67,
    "seq": 151,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 67,
    "seq": 152,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 68,
    "seq": 153,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 68,
    "seq": 154,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 69,
    "seq": 155,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 69,
    "seq": 156,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 70,
    "seq": 157,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 70,
    "seq": 158,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 71,
    "seq": 159,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 71,
    "seq": 160,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 72,
    "seq": 161,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 72,
    "seq": 162,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-9",
    "seq": 163,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-9",
    "seq": 164,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 73,
    "seq": 165,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 73,
    "seq": 166,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 74,
    "seq": 167,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 74,
    "seq": 168,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 75,
    "seq": 169,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 75,
    "seq": 170,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 76,
    "seq": 171,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 76,
    "seq": 172,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 77,
    "seq": 173,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 77,
    "seq": 174,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 78,
    "seq": 175,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 78,
    "seq": 176,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 79,
    "seq": 177,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 79,
    "seq": 178,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 80,
    "seq": 179,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 80,
    "seq": 180,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-10",
    "seq": 181,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-10",
    "seq": 182,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 81,
    "seq": 183,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 81,
    "seq": 184,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 82,
    "seq": 185,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 82,
    "seq": 186,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 83,
    "seq": 187,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 83,
    "seq": 188,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 84,
    "seq": 189,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 84,
    "seq": 190,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 85,
    "seq": 191,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 85,
    "seq": 192,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 86,
    "seq": 193,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 86,
    "seq": 194,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 87,
    "seq": 195,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 87,
    "seq": 196,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 88,
    "seq": 197,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 88,
    "seq": 198,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-11",
    "seq": 199,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-11",
    "seq": 200,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 89,
    "seq": 201,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 89,
    "seq": 202,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 90,
    "seq": 203,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 90,
    "seq": 204,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 91,
    "seq": 205,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 91,
    "seq": 206,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 92,
    "seq": 207,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 92,
    "seq": 208,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 93,
    "seq": 209,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 93,
    "seq": 210,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 94,
    "seq": 211,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 94,
    "seq": 212,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 95,
    "seq": 213,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 95,
    "seq": 214,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 96,
    "seq": 215,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 96,
    "seq": 216,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-12",
    "seq": 217,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-12",
    "seq": 218,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 97,
    "seq": 219,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 97,
    "seq": 220,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 98,
    "seq": 221,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 98,
    "seq": 222,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 99,
    "seq": 223,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 99,
    "seq": 224,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 100,
    "seq": 225,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 100,
    "seq": 226,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "country": "JP",
      "created_at": "2024-01-01 00:00:00",
      "email": "hina.watanabe100@example.com",
      "id": 100,
      "name": "Hina Watanabe",
    },
    "seq": 227,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 101,
    "seq": 228,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 101,
    "seq": 229,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 102,
    "seq": 230,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 102,
    "seq": 231,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 103,
    "seq": 232,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 103,
    "seq": 233,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 104,
    "seq": 234,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 104,
    "seq": 235,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-13",
    "seq": 236,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-13",
    "seq": 237,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 105,
    "seq": 238,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 105,
    "seq": 239,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 106,
    "seq": 240,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 106,
    "seq": 241,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 107,
    "seq": 242,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 107,
    "seq": 243,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 108,
    "seq": 244,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 108,
    "seq": 245,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 109,
    "seq": 246,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 109,
    "seq": 247,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 110,
    "seq": 248,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 110,
    "seq": 249,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 111,
    "seq": 250,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 111,
    "seq": 251,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 112,
    "seq": 252,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 112,
    "seq": 253,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-14",
    "seq": 254,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-14",
    "seq": 255,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 113,
    "seq": 256,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 113,
    "seq": 257,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 114,
    "seq": 258,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 114,
    "seq": 259,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 115,
    "seq": 260,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 115,
    "seq": 261,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 116,
    "seq": 262,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 116,
    "seq": 263,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 117,
    "seq": 264,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 117,
    "seq": 265,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 118,
    "seq": 266,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 118,
    "seq": 267,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 119,
    "seq": 268,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 119,
    "seq": 269,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 120,
    "seq": 270,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 120,
    "seq": 271,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-15",
    "seq": 272,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-15",
    "seq": 273,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 121,
    "seq": 274,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 121,
    "seq": 275,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 122,
    "seq": 276,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 122,
    "seq": 277,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 123,
    "seq": 278,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 123,
    "seq": 279,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 124,
    "seq": 280,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 124,
    "seq": 281,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 125,
    "seq": 282,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 125,
    "seq": 283,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 126,
    "seq": 284,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 126,
    "seq": 285,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 127,
    "seq": 286,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 127,
    "seq": 287,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 128,
    "seq": 288,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 128,
    "seq": 289,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-16",
    "seq": 290,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-16",
    "seq": 291,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 129,
    "seq": 292,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 129,
    "seq": 293,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 130,
    "seq": 294,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 130,
    "seq": 295,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 131,
    "seq": 296,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 131,
    "seq": 297,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 132,
    "seq": 298,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 132,
    "seq": 299,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 133,
    "seq": 300,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 133,
    "seq": 301,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 134,
    "seq": 302,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 134,
    "seq": 303,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 135,
    "seq": 304,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 135,
    "seq": 305,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 136,
    "seq": 306,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 136,
    "seq": 307,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-17",
    "seq": 308,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-17",
    "seq": 309,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 137,
    "seq": 310,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 137,
    "seq": 311,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 138,
    "seq": 312,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 138,
    "seq": 313,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 139,
    "seq": 314,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 139,
    "seq": 315,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 140,
    "seq": 316,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 140,
    "seq": 317,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 141,
    "seq": 318,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 141,
    "seq": 319,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 142,
    "seq": 320,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 142,
    "seq": 321,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 143,
    "seq": 322,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 143,
    "seq": 323,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 144,
    "seq": 324,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 144,
    "seq": 325,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-18",
    "seq": 326,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-18",
    "seq": 327,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 145,
    "seq": 328,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 145,
    "seq": 329,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 146,
    "seq": 330,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 146,
    "seq": 331,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 147,
    "seq": 332,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 147,
    "seq": 333,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 148,
    "seq": 334,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 148,
    "seq": 335,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 149,
    "seq": 336,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 149,
    "seq": 337,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 150,
    "seq": 338,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 150,
    "seq": 339,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 151,
    "seq": 340,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 151,
    "seq": 341,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 152,
    "seq": 342,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 152,
    "seq": 343,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-19",
    "seq": 344,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-19",
    "seq": 345,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 153,
    "seq": 346,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 153,
    "seq": 347,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 154,
    "seq": 348,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 154,
    "seq": 349,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 155,
    "seq": 350,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 155,
    "seq": 351,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 156,
    "seq": 352,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 156,
    "seq": 353,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 157,
    "seq": 354,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 157,
    "seq": 355,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 158,
    "seq": 356,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 158,
    "seq": 357,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 159,
    "seq": 358,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 159,
    "seq": 359,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 160,
    "seq": 360,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 160,
    "seq": 361,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-20",
    "seq": 362,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-20",
    "seq": 363,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 161,
    "seq": 364,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 161,
    "seq": 365,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 162,
    "seq": 366,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 162,
    "seq": 367,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 163,
    "seq": 368,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 163,
    "seq": 369,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 164,
    "seq": 370,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 164,
    "seq": 371,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 165,
    "seq": 372,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 165,
    "seq": 373,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 166,
    "seq": 374,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 166,
    "seq": 375,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 167,
    "seq": 376,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 167,
    "seq": 377,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 168,
    "seq": 378,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 168,
    "seq": 379,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-21",
    "seq": 380,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-21",
    "seq": 381,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 169,
    "seq": 382,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 169,
    "seq": 383,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 170,
    "seq": 384,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 170,
    "seq": 385,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 171,
    "seq": 386,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 171,
    "seq": 387,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 172,
    "seq": 388,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 172,
    "seq": 389,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 173,
    "seq": 390,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 173,
    "seq": 391,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 174,
    "seq": 392,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 174,
    "seq": 393,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 175,
    "seq": 394,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 175,
    "seq": 395,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 176,
    "seq": 396,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 176,
    "seq": 397,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-22",
    "seq": 398,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-22",
    "seq": 399,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 177,
    "seq": 400,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 177,
    "seq": 401,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 178,
    "seq": 402,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 178,
    "seq": 403,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 179,
    "seq": 404,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 179,
    "seq": 405,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 180,
    "seq": 406,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 180,
    "seq": 407,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 181,
    "seq": 408,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 181,
    "seq": 409,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 182,
    "seq": 410,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 182,
    "seq": 411,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 183,
    "seq": 412,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 183,
    "seq": 413,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 184,
    "seq": 414,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 184,
    "seq": 415,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-23",
    "seq": 416,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-23",
    "seq": 417,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 185,
    "seq": 418,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 185,
    "seq": 419,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 186,
    "seq": 420,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 186,
    "seq": 421,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 187,
    "seq": 422,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 187,
    "seq": 423,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 188,
    "seq": 424,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 188,
    "seq": 425,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 189,
    "seq": 426,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 189,
    "seq": 427,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 190,
    "seq": 428,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 190,
    "seq": 429,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 191,
    "seq": 430,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 191,
    "seq": 431,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 192,
    "seq": 432,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 192,
    "seq": 433,
    "type": "filter.eval",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-24",
    "seq": 434,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "fromKey": null,
    "index": "PRIMARY",
    "nodeId": "n1",
    "pageId": "users.PRIMARY#L0-24",
    "seq": 435,
    "toKey": null,
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 193,
    "seq": 436,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 193,
    "seq": 437,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 194,
    "seq": 438,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 194,
    "seq": 439,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 195,
    "seq": 440,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 195,
    "seq": 441,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 196,
    "seq": 442,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 196,
    "seq": 443,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 197,
    "seq": 444,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 197,
    "seq": 445,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 198,
    "seq": 446,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 198,
    "seq": 447,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 199,
    "seq": 448,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 199,
    "seq": 449,
    "type": "filter.eval",
  },
  {
    "nodeId": "n1",
    "pk": 200,
    "seq": 450,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": false,
    "pk": 200,
    "seq": 451,
    "type": "filter.eval",
  },
  {
    "diskReads": 25,
    "nodeId": "n3",
    "pagesRead": 25,
    "rowsExamined": 200,
    "rowsReturned": 1,
    "seq": 452,
    "type": "stats",
  },
]
`;

exports[`Trace の決定論 > シナリオ1: UNIQUE セカンダリ索引の等値検索: StepEvent[] がスナップショットと一致する 1`] = `
[
  {
    "candidates": [
      {
        "accessType": "ALL",
        "chosen": false,
        "cost": 45,
        "covering": false,
        "estimatedRows": 200,
        "index": null,
        "reason": "クラスタ索引のリーフを全件走査する",
        "table": "users",
      },
      {
        "accessType": "const",
        "chosen": true,
        "cost": 6.1,
        "covering": false,
        "estimatedRows": 1,
        "index": "idx_users_email",
        "reason": "UNIQUE 索引の全キー部が定数で決まるため高々1行",
        "table": "users",
      },
    ],
    "nodeId": "n3",
    "planTree": {
      "children": [
        {
          "children": [
            {
              "accessType": "const",
              "children": [],
              "covering": false,
              "estimatedRows": 1,
              "id": "n1",
              "index": "idx_users_email",
              "label": "Index lookup on users using idx_users_email over (email = 'hina.watanabe100@example.com')",
              "op": "IndexLookup",
              "table": "users",
            },
          ],
          "id": "n2",
          "index": "PRIMARY",
          "label": "Clustered index lookup on users (from idx_users_email)",
          "op": "ClusteredLookup",
          "table": "users",
        },
      ],
      "id": "n3",
      "label": "Projection: *",
      "op": "Projection",
    },
    "seq": 0,
    "type": "plan.selected",
  },
  {
    "index": "idx_users_email",
    "nodeId": "n1",
    "pageId": "users.idx_users_email#L2-0",
    "seq": 1,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "index": "idx_users_email",
    "level": 2,
    "nodeId": "n1",
    "pageId": "users.idx_users_email#L2-0",
    "searchKey": [
      "hina.watanabe100@example.com",
    ],
    "seq": 2,
    "type": "btree.descend",
  },
  {
    "index": "idx_users_email",
    "nodeId": "n1",
    "pageId": "users.idx_users_email#L1-0",
    "seq": 3,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "index": "idx_users_email",
    "level": 1,
    "nodeId": "n1",
    "pageId": "users.idx_users_email#L1-0",
    "searchKey": [
      "hina.watanabe100@example.com",
    ],
    "seq": 4,
    "type": "btree.descend",
  },
  {
    "index": "idx_users_email",
    "nodeId": "n1",
    "pageId": "users.idx_users_email#L0-4",
    "seq": 5,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "index": "idx_users_email",
    "level": 0,
    "nodeId": "n1",
    "pageId": "users.idx_users_email#L0-4",
    "searchKey": [
      "hina.watanabe100@example.com",
    ],
    "seq": 6,
    "type": "btree.descend",
  },
  {
    "fromKey": [
      "hina.watanabe100@example.com",
    ],
    "index": "idx_users_email",
    "nodeId": "n1",
    "pageId": "users.idx_users_email#L0-4",
    "seq": 7,
    "toKey": [
      "hina.watanabe100@example.com",
    ],
    "type": "btree.leaf.scan",
  },
  {
    "from": "idx_users_email",
    "nodeId": "n2",
    "pk": 100,
    "seq": 8,
    "table": "users",
    "type": "clustered.lookup",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n2",
    "pageId": "users.PRIMARY#L2-0",
    "seq": 9,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "index": "PRIMARY",
    "level": 2,
    "nodeId": "n2",
    "pageId": "users.PRIMARY#L2-0",
    "searchKey": [
      100,
    ],
    "seq": 10,
    "type": "btree.descend",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n2",
    "pageId": "users.PRIMARY#L1-0",
    "seq": 11,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "index": "PRIMARY",
    "level": 1,
    "nodeId": "n2",
    "pageId": "users.PRIMARY#L1-0",
    "searchKey": [
      100,
    ],
    "seq": 12,
    "type": "btree.descend",
  },
  {
    "index": "PRIMARY",
    "nodeId": "n2",
    "pageId": "users.PRIMARY#L0-12",
    "seq": 13,
    "source": "disk",
    "table": "users",
    "type": "page.read",
  },
  {
    "index": "PRIMARY",
    "level": 0,
    "nodeId": "n2",
    "pageId": "users.PRIMARY#L0-12",
    "searchKey": [
      100,
    ],
    "seq": 14,
    "type": "btree.descend",
  },
  {
    "nodeId": "n2",
    "pk": 100,
    "seq": 15,
    "table": "users",
    "type": "row.read",
  },
  {
    "nodeId": "n3",
    "row": {
      "country": "JP",
      "created_at": "2024-01-01 00:00:00",
      "email": "hina.watanabe100@example.com",
      "id": 100,
      "name": "Hina Watanabe",
    },
    "seq": 16,
    "type": "row.emit",
  },
  {
    "diskReads": 6,
    "nodeId": "n3",
    "pagesRead": 6,
    "rowsExamined": 1,
    "rowsReturned": 1,
    "seq": 17,
    "type": "stats",
  },
]
`;

exports[`Trace の決定論 > シナリオ2: カバリング索引の範囲検索: StepEvent[] がスナップショットと一致する 1`] = `
[
  {
    "candidates": [
      {
        "accessType": "ALL",
        "chosen": false,
        "cost": 450,
        "covering": false,
        "estimatedRows": 2000,
        "index": null,
        "reason": "クラスタ索引のリーフを全件走査する",
        "table": "orders",
      },
      {
        "accessType": "range",
        "chosen": false,
        "cost": 289.9,
        "covering": false,
        "estimatedRows": 89,
        "index": "idx_orders_user",
        "reason": "範囲条件で索引のリーフを部分走査する",
        "table": "orders",
      },
      {
        "accessType": "range",
        "chosen": true,
        "cost": 22.9,
        "covering": true,
        "estimatedRows": 89,
        "index": "idx_orders_user_status",
        "reason": "範囲条件で索引のリーフを部分走査する",
        "table": "orders",
      },
    ],
    "nodeId": "n3",
    "planTree": {
      "children": [
        {
          "children": [
            {
              "accessType": "range",
              "children": [],
              "covering": true,
              "estimatedRows": 89,
              "id": "n1",
              "index": "idx_orders_user_status",
              "label": "Covering index range scan on orders using idx_orders_user_status over (10 <= user_id <= 20)",
              "op": "IndexRangeScan",
              "table": "orders",
            },
          ],
          "id": "n2",
          "label": "Filter: (user_id BETWEEN 10 AND 20)",
          "op": "Filter",
        },
      ],
      "id": "n3",
      "label": "Projection: user_id, status",
      "op": "Projection",
    },
    "seq": 0,
    "type": "plan.selected",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L2-0",
    "seq": 1,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "index": "idx_orders_user_status",
    "level": 2,
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L2-0",
    "searchKey": [
      10,
    ],
    "seq": 2,
    "type": "btree.descend",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L1-0",
    "seq": 3,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "index": "idx_orders_user_status",
    "level": 1,
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L1-0",
    "searchKey": [
      10,
    ],
    "seq": 4,
    "type": "btree.descend",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-11",
    "seq": 5,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "index": "idx_orders_user_status",
    "level": 0,
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-11",
    "searchKey": [
      10,
    ],
    "seq": 6,
    "type": "btree.descend",
  },
  {
    "fromKey": [
      10,
    ],
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-11",
    "seq": 7,
    "toKey": [
      20,
    ],
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 1250,
    "seq": 8,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1250,
    "seq": 9,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 10,
    },
    "seq": 10,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1673,
    "seq": 11,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1673,
    "seq": 12,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 10,
    },
    "seq": 13,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1130,
    "seq": 14,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1130,
    "seq": 15,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 10,
    },
    "seq": 16,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1433,
    "seq": 17,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1433,
    "seq": 18,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 10,
    },
    "seq": 19,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1624,
    "seq": 20,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1624,
    "seq": 21,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 10,
    },
    "seq": 22,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1578,
    "seq": 23,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1578,
    "seq": 24,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 10,
    },
    "seq": 25,
    "type": "row.emit",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-12",
    "seq": 26,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "fromKey": [
      10,
    ],
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-12",
    "seq": 27,
    "toKey": [
      20,
    ],
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 749,
    "seq": 28,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 749,
    "seq": 29,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 11,
    },
    "seq": 30,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1148,
    "seq": 31,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1148,
    "seq": 32,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 11,
    },
    "seq": 33,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1998,
    "seq": 34,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1998,
    "seq": 35,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 11,
    },
    "seq": 36,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1077,
    "seq": 37,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1077,
    "seq": 38,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 11,
    },
    "seq": 39,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 142,
    "seq": 40,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 142,
    "seq": 41,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 11,
    },
    "seq": 42,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 396,
    "seq": 43,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 396,
    "seq": 44,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 11,
    },
    "seq": 45,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1301,
    "seq": 46,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1301,
    "seq": 47,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 11,
    },
    "seq": 48,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1815,
    "seq": 49,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1815,
    "seq": 50,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 11,
    },
    "seq": 51,
    "type": "row.emit",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-13",
    "seq": 52,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "fromKey": [
      10,
    ],
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-13",
    "seq": 53,
    "toKey": [
      20,
    ],
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 585,
    "seq": 54,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 585,
    "seq": 55,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 12,
    },
    "seq": 56,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 180,
    "seq": 57,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 180,
    "seq": 58,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 12,
    },
    "seq": 59,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 440,
    "seq": 60,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 440,
    "seq": 61,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 12,
    },
    "seq": 62,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 525,
    "seq": 63,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 525,
    "seq": 64,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 12,
    },
    "seq": 65,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 632,
    "seq": 66,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 632,
    "seq": 67,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 12,
    },
    "seq": 68,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1458,
    "seq": 69,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1458,
    "seq": 70,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 12,
    },
    "seq": 71,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1728,
    "seq": 72,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1728,
    "seq": 73,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 12,
    },
    "seq": 74,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 828,
    "seq": 75,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 828,
    "seq": 76,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 12,
    },
    "seq": 77,
    "type": "row.emit",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-14",
    "seq": 78,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "fromKey": [
      10,
    ],
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-14",
    "seq": 79,
    "toKey": [
      20,
    ],
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 185,
    "seq": 80,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 185,
    "seq": 81,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 12,
    },
    "seq": 82,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1318,
    "seq": 83,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1318,
    "seq": 84,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 12,
    },
    "seq": 85,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1722,
    "seq": 86,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1722,
    "seq": 87,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 12,
    },
    "seq": 88,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1823,
    "seq": 89,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1823,
    "seq": 90,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 12,
    },
    "seq": 91,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 171,
    "seq": 92,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 171,
    "seq": 93,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 13,
    },
    "seq": 94,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 400,
    "seq": 95,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 400,
    "seq": 96,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 13,
    },
    "seq": 97,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1495,
    "seq": 98,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1495,
    "seq": 99,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 13,
    },
    "seq": 100,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 256,
    "seq": 101,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 256,
    "seq": 102,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 13,
    },
    "seq": 103,
    "type": "row.emit",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-15",
    "seq": 104,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "fromKey": [
      10,
    ],
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-15",
    "seq": 105,
    "toKey": [
      20,
    ],
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 720,
    "seq": 106,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 720,
    "seq": 107,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 13,
    },
    "seq": 108,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1706,
    "seq": 109,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1706,
    "seq": 110,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 13,
    },
    "seq": 111,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 4,
    "seq": 112,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 4,
    "seq": 113,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 13,
    },
    "seq": 114,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 332,
    "seq": 115,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 332,
    "seq": 116,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 13,
    },
    "seq": 117,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 664,
    "seq": 118,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 664,
    "seq": 119,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 13,
    },
    "seq": 120,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1256,
    "seq": 121,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1256,
    "seq": 122,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 13,
    },
    "seq": 123,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 449,
    "seq": 124,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 449,
    "seq": 125,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 13,
    },
    "seq": 126,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1490,
    "seq": 127,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1490,
    "seq": 128,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 14,
    },
    "seq": 129,
    "type": "row.emit",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-16",
    "seq": 130,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "fromKey": [
      10,
    ],
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-16",
    "seq": 131,
    "toKey": [
      20,
    ],
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 963,
    "seq": 132,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 963,
    "seq": 133,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 14,
    },
    "seq": 134,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1134,
    "seq": 135,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1134,
    "seq": 136,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 14,
    },
    "seq": 137,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1183,
    "seq": 138,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1183,
    "seq": 139,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 14,
    },
    "seq": 140,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 233,
    "seq": 141,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 233,
    "seq": 142,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 14,
    },
    "seq": 143,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 248,
    "seq": 144,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 248,
    "seq": 145,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 14,
    },
    "seq": 146,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1655,
    "seq": 147,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1655,
    "seq": 148,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 14,
    },
    "seq": 149,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 710,
    "seq": 150,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 710,
    "seq": 151,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 15,
    },
    "seq": 152,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 796,
    "seq": 153,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 796,
    "seq": 154,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 15,
    },
    "seq": 155,
    "type": "row.emit",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-17",
    "seq": 156,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "fromKey": [
      10,
    ],
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-17",
    "seq": 157,
    "toKey": [
      20,
    ],
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 879,
    "seq": 158,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 879,
    "seq": 159,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 15,
    },
    "seq": 160,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1108,
    "seq": 161,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1108,
    "seq": 162,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 15,
    },
    "seq": 163,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1354,
    "seq": 164,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1354,
    "seq": 165,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 15,
    },
    "seq": 166,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 276,
    "seq": 167,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 276,
    "seq": 168,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 16,
    },
    "seq": 169,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 693,
    "seq": 170,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 693,
    "seq": 171,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 16,
    },
    "seq": 172,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 946,
    "seq": 173,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 946,
    "seq": 174,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 16,
    },
    "seq": 175,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 57,
    "seq": 176,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 57,
    "seq": 177,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 16,
    },
    "seq": 178,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1033,
    "seq": 179,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1033,
    "seq": 180,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 16,
    },
    "seq": 181,
    "type": "row.emit",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-18",
    "seq": 182,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "fromKey": [
      10,
    ],
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-18",
    "seq": 183,
    "toKey": [
      20,
    ],
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 1163,
    "seq": 184,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1163,
    "seq": 185,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 16,
    },
    "seq": 186,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1883,
    "seq": 187,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1883,
    "seq": 188,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 16,
    },
    "seq": 189,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 929,
    "seq": 190,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 929,
    "seq": 191,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 17,
    },
    "seq": 192,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 209,
    "seq": 193,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 209,
    "seq": 194,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 17,
    },
    "seq": 195,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1039,
    "seq": 196,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1039,
    "seq": 197,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 17,
    },
    "seq": 198,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1045,
    "seq": 199,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1045,
    "seq": 200,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 17,
    },
    "seq": 201,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1679,
    "seq": 202,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1679,
    "seq": 203,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 17,
    },
    "seq": 204,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1684,
    "seq": 205,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1684,
    "seq": 206,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 17,
    },
    "seq": 207,
    "type": "row.emit",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-19",
    "seq": 208,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "fromKey": [
      10,
    ],
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-19",
    "seq": 209,
    "toKey": [
      20,
    ],
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 20,
    "seq": 210,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 20,
    "seq": 211,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 17,
    },
    "seq": 212,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1051,
    "seq": 213,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1051,
    "seq": 214,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 17,
    },
    "seq": 215,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1322,
    "seq": 216,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1322,
    "seq": 217,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 17,
    },
    "seq": 218,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 84,
    "seq": 219,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 84,
    "seq": 220,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 18,
    },
    "seq": 221,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1730,
    "seq": 222,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1730,
    "seq": 223,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 18,
    },
    "seq": 224,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 619,
    "seq": 225,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 619,
    "seq": 226,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 18,
    },
    "seq": 227,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1870,
    "seq": 228,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1870,
    "seq": 229,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 18,
    },
    "seq": 230,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1984,
    "seq": 231,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1984,
    "seq": 232,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 18,
    },
    "seq": 233,
    "type": "row.emit",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-20",
    "seq": 234,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "fromKey": [
      10,
    ],
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-20",
    "seq": 235,
    "toKey": [
      20,
    ],
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 793,
    "seq": 236,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 793,
    "seq": 237,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 18,
    },
    "seq": 238,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1803,
    "seq": 239,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1803,
    "seq": 240,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 18,
    },
    "seq": 241,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 292,
    "seq": 242,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 292,
    "seq": 243,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 18,
    },
    "seq": 244,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 427,
    "seq": 245,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 427,
    "seq": 246,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 18,
    },
    "seq": 247,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 448,
    "seq": 248,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 448,
    "seq": 249,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 18,
    },
    "seq": 250,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 944,
    "seq": 251,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 944,
    "seq": 252,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 18,
    },
    "seq": 253,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1533,
    "seq": 254,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1533,
    "seq": 255,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 19,
    },
    "seq": 256,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1059,
    "seq": 257,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1059,
    "seq": 258,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 19,
    },
    "seq": 259,
    "type": "row.emit",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-21",
    "seq": 260,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "fromKey": [
      10,
    ],
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-21",
    "seq": 261,
    "toKey": [
      20,
    ],
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 1963,
    "seq": 262,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1963,
    "seq": 263,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 19,
    },
    "seq": 264,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1018,
    "seq": 265,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1018,
    "seq": 266,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 19,
    },
    "seq": 267,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 245,
    "seq": 268,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 245,
    "seq": 269,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 19,
    },
    "seq": 270,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 454,
    "seq": 271,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 454,
    "seq": 272,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 19,
    },
    "seq": 273,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 409,
    "seq": 274,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 409,
    "seq": 275,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 20,
    },
    "seq": 276,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1627,
    "seq": 277,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1627,
    "seq": 278,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "cancelled",
      "user_id": 20,
    },
    "seq": 279,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 227,
    "seq": 280,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 227,
    "seq": 281,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 20,
    },
    "seq": 282,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 1117,
    "seq": 283,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 1117,
    "seq": 284,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "paid",
      "user_id": 20,
    },
    "seq": 285,
    "type": "row.emit",
  },
  {
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-22",
    "seq": 286,
    "source": "disk",
    "table": "orders",
    "type": "page.read",
  },
  {
    "fromKey": [
      10,
    ],
    "index": "idx_orders_user_status",
    "nodeId": "n1",
    "pageId": "orders.idx_orders_user_status#L0-22",
    "seq": 287,
    "toKey": [
      20,
    ],
    "type": "btree.leaf.scan",
  },
  {
    "nodeId": "n1",
    "pk": 640,
    "seq": 288,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 640,
    "seq": 289,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 20,
    },
    "seq": 290,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 923,
    "seq": 291,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 923,
    "seq": 292,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "pending",
      "user_id": 20,
    },
    "seq": 293,
    "type": "row.emit",
  },
  {
    "nodeId": "n1",
    "pk": 933,
    "seq": 294,
    "table": "orders",
    "type": "row.read",
  },
  {
    "nodeId": "n2",
    "passed": true,
    "pk": 933,
    "seq": 295,
    "type": "filter.eval",
  },
  {
    "nodeId": "n3",
    "row": {
      "status": "shipped",
      "user_id": 20,
    },
    "seq": 296,
    "type": "row.emit",
  },
  {
    "diskReads": 14,
    "nodeId": "n3",
    "pagesRead": 14,
    "rowsExamined": 89,
    "rowsReturned": 89,
    "seq": 297,
    "type": "stats",
  },
]
`;
